--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev src/index"
+  },
   "dependencies": {
     "apollo-server": "^3.4.0",
     "class-validator": "^0.13.1",
@@ -11,7 +14,7 @@
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
 }
