Rename main package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resource-sharing-app",
+  "name": "node-react-graphql-template",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Benoît Hubert <benoithubert@gmail.com>",
