--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,7 +11,9 @@
     "class-validator": "^0.13.1",
     "graphql": "^15.7.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "sqlite3": "^5.0.2",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "ts-node-dev": "^1.1.8",
